# mmdeploy

./: CMakeLists.txt
csrc/mmdeploy/apis/python/: detector.cpp
csrc/mmdeploy/codebase/mmdet/: instance_segmentation.cpp
csrc/preprocess/: CMakeLists.txt
csrc/preprocess/cuda/: CMakeLists.txt
demo/csrc/cpp/: detector.cxx
demo/python/: object_detection.py
tests/test_csrc/: test_resource.h
tests/test_csrc/config/: test_define.h.in
tests/test_csrc/preprocess/: test_crop.cpp  test_image2tensor.cpp  test_load.cpp  test_normalize.cpp  test_pad.cpp  test_resize.cpp
