# Copyright (c) OpenMMLab. All rights reserved.
cmake_minimum_required(VERSION 3.14)
project(mmdeploy_transform_module)

set(_TRANSFORM_DEVICES ${MMDEPLOY_TARGET_DEVICES})
add_subdirectory(transform)
add_subdirectory(cpu)
if ("cuda" IN_LIST MMDEPLOY_TARGET_DEVICES)
    find_package(pplcv)
    if (pplcv_FOUND)
        add_subdirectory(cuda)
    else ()
        list(REMOVE_ITEM _TRANSFORM_DEVICES "cuda")
    endif ()
endif ()
set(MMDEPLOY_TRANSFORM_DEVICES ${_TRANSFORM_DEVICES} CACHE STRING "")

include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
build_target(${PROJECT_NAME} transform_module.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE mmdeploy::core)
add_library(mmdeploy::transform_module ALIAS ${PROJECT_NAME})
export_module(${PROJECT_NAME})
